--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ section {
   margin-bottom: 35px;
   color: #024e76;
 }
-
+/* reach out styles */
 .contact {
   text-align: center;
   background: #024e76;
@@ -240,3 +240,21 @@ section {
   margin: 30px 0 0 60px;
   color: white;
 }
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* reach out styles end */
