--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,20 +125,17 @@ section {
   text-align: center;
 }
 
-.section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
-}
-.primary-border {
-  border-color: #fce138;
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+  margin: 0 auto;
 }
 
-.secondary-border{
-  border-color: #39a6b2;
+.steps {
+  text-align: center;
+  background: #fce138;
 }
 
 .steps div {
@@ -165,8 +162,28 @@ section {
   font-size: 38px;
 }
 
-.trainer {
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
+.trainers {
   text-align: center;
+}
+
+.trainer {
   width: 900px;
   margin: 0 auto 30px auto;
   background: #024e76;
@@ -185,14 +202,6 @@ section {
   width: 65%;
 }
 
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right; 
-}
-
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -209,15 +218,15 @@ section {
   line-height: 1.3;
 }
 
-.section-title {
-  font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  margin-bottom: 35px;
-  color: #024e76;
+.text-left {
+  text-align: left;
 }
-/* reach out styles */
+
+.text-right {
+  text-align: right;
+}
+
+/* REACH OUT STYLES START */
 .contact {
   text-align: center;
   background: #024e76;
@@ -246,7 +255,8 @@ section {
   font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
   margin: 20px 0;
   line-height: 1.5;
   font-size: 20px;
@@ -257,4 +267,4 @@ section {
   color: #fce138;
 }
 
-/* reach out styles end */
+/* REACH OUT STYLES END */
